fix class collapsed for treeview

--- a/docs/css/metro.css
+++ b/docs/css/metro.css
@@ -2469,6 +2469,15 @@ span {
 .set-border.large-border {
   border-width: 16px;
 }
+.pos-abs {
+  position: absolute !important;
+}
+.pos-rel {
+  position: relative !important;
+}
+.pos-fix {
+  position: fixed !important;
+}
 /* transform functions */
 .rotate45 {
   -webkit-transform: rotate(45deg);
@@ -8900,6 +8909,7 @@ input[type="submit"].link:active {
   }
 }
 .calendar {
+  min-width: 13.75rem;
   border: 1px #eeeeee solid;
   font-size: .75rem;
   padding: .3125rem;
@@ -12468,6 +12478,9 @@ input[type="submit"].link:active {
 }
 .treeview .node.collapsed:hover > .node-toggle:before {
   border-bottom-color: #1b6eae;
+}
+.treeview .node.collapsed > ul {
+  display: none;
 }
 .presenter {
   width: 100%;
