--- a/less/calendar.less
+++ b/less/calendar.less
@@ -3,7 +3,7 @@
 @import (once) "utils";
 
 .calendar {
-    //min-width: 15.625rem;
+    min-width: 13.75rem;
     border: 1px @grayLighter solid;
     font-size: .75rem;
 	padding: .3125rem;
